--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     background-color: #161718;
     color: #e2e2d5;
-    /*text-align: center;*/
     padding: 0 2em;
 }
 
@@ -13,13 +12,12 @@ h1 {
 }
 
 h2 {
-    /*font-size: 30px;*/
     color: #b1b0a6;
 }
 
 p {
     font-size: 20px;
-    color: #dedece
+    color: #dedece;
 }
 
 a {
@@ -32,3 +30,56 @@ a:hover {
     text-decoration: underline;
 }
 
+form {
+    background-color: #2a2b2d;
+    padding: 1em;
+    border-radius: 8px;
+    width: 100%;
+    max-width: 400px;
+    box-sizing: border-box;
+}
+
+label {
+    color: #cfcec3;
+    font-size: 18px;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 0.5em;
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+    background-color: #3a3b3f;
+    color: #e2e2d5;
+    border: 1px solid #555;
+    border-radius: 5px;
+    transition: outline 0.3s; /* Smooth transition for outline */
+}
+
+input[type="submit"] {
+    width: 100%;
+    padding: 1em;
+    background-color: #3498db;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #2980b9;
+}
+
+#usernameError {
+    font-size: 14px;
+    color: red;
+    margin-top: -8px; /* Reduced space between input and error */
+    display: none; /* Hide by default */
+    opacity: 0; /* Initially invisible */
+    transition: opacity 0.3s; /* Fade-in effect */
+}
+
+.error-icon {
+    margin-right: 5px; /* Space between icon and text */
+}
